using CustomLib.Models.Comments;

namespace CustomLib.Interfaces
{
    public interface CommentsInterface : AbstractInterface<CommentRead, CommentQuery, CommentCreate, CommentUpdate>
    {

    }
}
